force-app/main/default/objects/Cal_User_Preferences__c/Cal_User_Preferences__c.object-meta.xml
<CustomObject>
    <description>One row per user. Persists which calendars a user displays plus their view / layout / display-chrome choices for the calendar workspace.</description>
    <label>Calendar User Preference</label>
    <nameField>
        <displayFormat>PREF-{00000}</displayFormat>
        <label>Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar User Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>