force-app/main/default/objects/Cal_User_Preferences__c/fields/First_Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>First_Day_Of_Week__c</fullName>
    <label>First Day Of Week</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>