force-app/main/default/objects/Cal_User_Preferences__c/fields/Hide_Legend__c.field-meta.xml
<CustomField>
    <fullName>Hide_Legend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Legend</label>
    <type>Checkbox</type>
</CustomField>