force-app/main/default/objects/Cal_User_Preferences__c/fields/Hide_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Hide_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Weekends</label>
    <type>Checkbox</type>
</CustomField>