force-app/main/default/objects/Cal_User_Preferences__c/fields/Last_Layout__c.field-meta.xml
<CustomField>
    <fullName>Last_Layout__c</fullName>
    <label>Last Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>scheduler</fullName>
            </value>
            <value>
                <fullName>condensed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>