force-app/main/default/objects/Cal_User_Preferences__c/fields/Last_View__c.field-meta.xml
<CustomField>
    <fullName>Last_View__c</fullName>
    <label>Last View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>month</fullName>
            </value>
            <value>
                <fullName>week</fullName>
            </value>
            <value>
                <fullName>day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>