force-app/main/default/objects/Cal_User_Preferences__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <description>BCP-47 locale tag passed to Intl in the calendar. Blank uses the browser locale.</description>
    <label>Locale</label>
    <length>10</length>
    <type>Text</type>
</CustomField>