force-app/main/default/objects/Cal_User_Preferences__c/fields/Max_Events_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Events_Per_Day__c</fullName>
    <label>Max Events Per Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>