force-app/main/default/objects/Cal_User_Preferences__c/fields/Preferences_JSON__c.field-meta.xml
<CustomField>
    <fullName>Preferences_JSON__c</fullName>
    <description>Extensible JSON bag for future per-view UI state. Unknown keys are ignored.</description>
    <label>Preferences (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>