force-app/main/default/objects/Cal_User_Preferences__c/fields/Primary_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Primary_Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supplies the merged colorRules.defaultColor and sits first in the color-rule / field-config merge order.</description>
    <label>Primary Calendar</label>
    <referenceTo>Cal_Calendar__c</referenceTo>
    <relationshipLabel>User Preferences (Primary)</relationshipLabel>
    <relationshipName>User_Preferences_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>