force-app/main/default/objects/Cal_User_Preferences__c/fields/Scheduler_Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Start_Hour__c</fullName>
    <label>Scheduler Start Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>