force-app/main/default/objects/Cal_User_Preferences__c/fields/Selected_Calendar_Ids__c.field-meta.xml
<CustomField>
    <fullName>Selected_Calendar_Ids__c</fullName>
    <description>JSON array of Cal_Calendar__c Ids the user currently displays.</description>
    <label>Selected Calendar Ids (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>