force-app/main/default/objects/Cal_User_Preferences__c/fields/Show_Legend_Counts__c.field-meta.xml
<CustomField>
    <fullName>Show_Legend_Counts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Legend Counts</label>
    <type>Checkbox</type>
</CustomField>