force-app/main/default/objects/Cal_User_Preferences__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user these preferences belong to. Always set to the running user by CalUserPreferencesDomain; the trigger rejects any other value.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Calendar Preferences</relationshipLabel>
    <relationshipName>Calendar_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>