force-app/main/default/objects/Cal_User_Preferences__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Selected_Calendar_Ids__c</columns>
    <columns>Primary_Calendar__c</columns>
    <columns>Last_View__c</columns>
    <columns>Last_Layout__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>