force-app/main/default/objects/Cal_User_Preferences__c/listViews/My_Preferences.listView-meta.xml
<ListView>
    <fullName>My_Preferences</fullName>
    <columns>NAME</columns>
    <columns>Selected_Calendar_Ids__c</columns>
    <columns>Primary_Calendar__c</columns>
    <columns>Last_View__c</columns>
    <columns>Last_Layout__c</columns>
    <columns>First_Day_Of_Week__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Preferences</label>
</ListView>